@@ -6,7 +6,10 @@
     using System.Linq;
 
     using AjRuby;
+    using AjRuby.Expressions;
     using AjRuby.Language;
+
+    using AjRuby.Tests.Mocks;
 
     using Microsoft.VisualStudio.TestTools.UnitTesting;
 
@@ -43,6 +46,31 @@
         public void RaiseIfNullNameInLocalVariableExpression()
         {
             new LocalVariableExpression(null);
+        }
+
+        [TestMethod]
+        public void DefineAndEvaluateDotExpression()
+        {
+            DotExpression expr = new DotExpression(new ConstantExpression(new MockObject()), "foo", null);
+
+            object result = expr.Evaluate(null);
+
+            Assert.IsNotNull(result);
+            Assert.AreEqual("foo", result);
+        }
+
+        [TestMethod]
+        public void DefineAndEvaluateDotExpressionWithArguments()
+        {
+            List<IExpression> arguments = new List<IExpression>();
+            arguments.Add(new ConstantExpression(1));
+            arguments.Add(new ConstantExpression(2));
+            DotExpression expr = new DotExpression(new ConstantExpression(new MockObject()), "foo", arguments);
+
+            object result = expr.Evaluate(null);
+
+            Assert.IsNotNull(result);
+            Assert.AreEqual("foo:1:2", result);
         }
     }
 }
